improved the arquillian drone deployment