@@ -17,7 +17,7 @@
             <dependency>
                 <groupId>org.jboss.arquillian</groupId>
                 <artifactId>arquillian-bom</artifactId>
-                <version>1.0.0.Final</version>
+                <version>1.0.1.Final</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
@@ -69,6 +69,11 @@
         <dependency>
             <groupId>org.jboss.arquillian.junit</groupId>
             <artifactId>arquillian-junit-container</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.shrinkwrap.resolver</groupId>
+            <artifactId>shrinkwrap-resolver-impl-maven</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -184,6 +189,7 @@
                         </configuration>
                     </plugin>
                     <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
                         <version>2.12.1</version>
                         <executions>
@@ -195,6 +201,7 @@
                             </execution>
                         </executions>
                         <configuration>
+                            <argLine>-Xms712m -Xmx712m -XX:MaxPermSize=500m</argLine>
                             <systemProperties>
                                 <arquillian.launch>jbossas-managed</arquillian.launch>
                             </systemProperties>
